# Forest-Type-Coverage-Prediction-ML

./: .flake8  .gitignore  README.md  mypi.ini  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: nox.yml  tests.yml
src/ml_project_demo/: console.py  report.py
src/mpd/: TODO  __init__.py  crossvalidate.py  data.py  files.py  mlflow_utils.py  model.py  report.py  searchcv.py  train.py  train_auto.py  train_logreg.py  train_randfor.py
tests/: test_console.py  test_searchcv.py  test_train.py
