[tool.poetry]
name = "mpd"
version = "0.0.1"
description = "Demo ml project"
authors = ["Golgovskiy"]
readme = "README.md"
repository = "https://github.com/Golgovskiy/ml-project-demo"
keywords = ["demo"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pandas = "^1.4.2"
pandas-profiling = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
report = "mpd.report:makeReport"
train = "mpd.train:train"